<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!--主界面-->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!--输入框和按钮-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:orientation="vertical">
            <!--类型-->
            <EditText
                android:id="@+id/et_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/type"
                android:imeOptions="actionNext"
                android:inputType="text" />

            <!--账号-->
            <EditText
                android:id="@+id/et_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:autofillHints=""
                android:hint="@string/account"
                android:imeOptions="actionNext"
                android:inputType="text" />

            <!--密码-->
            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/password"
                android:inputType="text"
                android:imeOptions="actionDone"
                tools:ignore="TextFields" />
            <!--保存-->
            <Button
                android:id="@+id/btn_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/save" />

            <!--修改-->
            <Button
                android:id="@+id/btn_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/update" />

            <!--删除-->
            <Button
                android:id="@+id/btn_delete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delete" />
        </LinearLayout>
    </FrameLayout>
    <!--侧滑出的界面-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/drawer_bg"
        android:layout_gravity="start">
        <!--快速搜索框-->
        <EditText
            android:id="@+id/search_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="15dp"
            android:autofillHints=""
            android:hint="@string/search_value"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:background="@drawable/drawer_edit_bg"
            android:layout_marginStart="15dp" />

        <!--密码名称列表-->
        <ListView
            android:id="@+id/password_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</androidx.drawerlayout.widget.DrawerLayout>